vlib/v/checker/tests/generics_fn_param_wrong_arg_type_err.vv
fn test[T, U](f fn (T) U) U {
	return f(1)
}

fn main() {
	println(test(fn (x string) int {
		return x.len
	}))
}
